--- a/requirements.txt
+++ b/requirements.txt
@@ -4,13 +4,11 @@ pandas>=2.0.0
 scipy>=1.10.0
 
 # Data Sources
-yfinance>=0.2.0
-pandas-datareader>=0.10.0
+yfinance>=0.2.28
 requests>=2.31.0
 
 # Database
 sqlalchemy>=2.0.0
-sqlite3
 
 # Configuration
 python-dotenv>=1.0.0
@@ -19,29 +17,18 @@ pyyaml>=6.0.0
 # Visualization
 plotly>=5.14.0
 matplotlib>=3.7.0
-seaborn>=0.12.0
 
 # Dashboard
 streamlit>=1.28.0
-dash>=2.14.0
 
-# Options Pricing & Quantitative Finance
+# Options Pricing
 py_vollib>=1.0.1
-quantlib>=1.31
 
 # Numerical Methods
 numba>=0.57.0
 
 # Testing
 pytest>=7.4.0
-pytest-cov>=4.1.0
 
 # Utilities
 tqdm>=4.65.0
-loguru>=0.7.0
-
-# Optional: For faster performance
-# Uncomment if needed
-# cython>=3.0.0
-
-
